# Proyecto-Hospital

./: .gitignore  CMakeLists.txt  README.md  enfermedades.csv  medicamentos.csv  pacientes.csv
ProyectoAED1/: CMakeLists.txt  ProyectoAED1.cpp  ProyectoAED1.h  ProyectoAED1_test.cpp  doctores.csv  lib.cpp  lib.h  pacientes.csv  sistemaFicheros.cpp
